# CMakeVSCodeTemplate

./: .gitignore  CMakeLists.txt
src/: main.cpp
